# astrolibrary-api

./: LICENSE  Makefile  devtools_requirements.txt  pyproject.toml  requirements.txt
API_draft/: README.md
docs/: README.md  milestone4.md  milestone5.md
docs/sphinx/: astrolibrary.data_acquisition.query_interface.cross_matching.rst  astrolibrary.data_acquisition.query_interface.rst  astrolibrary.data_acquisition.spectra_data_retrieval.rst  astrolibrary.data_manipulation.machine_learning.rst  astrolibrary.data_processing.data_preprocessing.rst  astrolibrary.data_processing.metadata_extractor.rst  astrolibrary.data_visualization.rst  conf.py
docs/sphinx/_build/doctrees/: astrolibrary.data_acquisition.doctree  astrolibrary.doctree  (+13 more)
src/astrolibrary/: __init__.py  __main__.py
src/astrolibrary/data_acquisition/: spectra_data_retrieval.py
src/astrolibrary/data_manipulation/: machine_learning.py
src/astrolibrary/data_processing/: data_preprocessing.py  metadata_extractor.py
src/astrolibrary/data_visualization/: spectral_visualization.py
tests/: conftest.py  sample_inputs.py  sample_test_csv.csv  test_integration.py
tests/data_acquisition/: test_get_spectra_data.py
tests/data_acquisition/query_interface/: test_cross_matching.py  test_query_handler.py
tests/data_manipulation/: test_machine_learning.py
tests/data_processing/: test_data_preprocesser.py  test_metadata_extractor.py
tests/data_visualization/: test_spectral_visualization.py
tutorials/: Astrolibrary_tutorial.ipynb  dr18webexample.fits  spec-7644-57327-0528.csv  spec-7644-57327-0528.fits
(+34 files in other folders)
